# gst

./: .clang-format  .gitignore  CMakeLists.txt
src/: Main.cpp  basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  gstwatermarkapplyer.c  tutorials.h
src/plugin/: gstwatermarkapplyer.c  gstwatermarkapplyer.h
